--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Al Fath Darussalam</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -53,15 +53,13 @@
                 <div class="container col-xxl-8 px-4 py-5">
                     <div
                         class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                        <div class="col-10 col-sm-8 col-lg-6">
+                        <div class="col-lg-6">
                             <img src="./img/img3.jpeg"
                                 class="d-block mx-lg-auto img-fluid shadow-lg rounded"
                                 alt="Bootstrap Themes" width="700" height="500"
                                 loading="lazy">
-                        </div>
-                        <div class="col-lg-6">
                             <h1
-                                class="display-5 fw-bold lh-1  mb-4">Rumah
+                                class="display-5 fw-bold lh-1  mb-4 mt-2">Rumah
                                 Quran Al Fath Darussalam</h1>
 
                             <blockquote
@@ -89,7 +87,7 @@
                                 <button id="pendaftaran" type="button"
                                     class="btn btn-dark btn-lg px-2 me-md-2 mt-3">Pendaftaran</button>
                                 <button id="produk" type="button"
-                                    class="btn btn-outline-secondary btn-lg px-4">Produk</button>
+                                    class="btn btn-outline-secondary btn-lg px-4">Kurikulum</button>
                             </div>
                         </div>
                     </div>
@@ -101,15 +99,13 @@
                 <div class="container col-xxl-8 px-4">
                     <div
                         class="row flex-lg-row-reverse align-items-center g-5 ">
-                        <div class="col-10 col-sm-8 col-lg-6">
+                        <div class="col-lg-6">
                             <img src="./img/img5.jpeg"
                                 class="d-block mx-lg-auto img-fluid shadow-lg rounded"
                                 alt="Bootstrap Themes" width="700" height="500"
                                 loading="lazy">
-                        </div>
-                        <div class="col-lg-6">
                             <h1
-                                class="display-5 fw-bold lh-1  mb-4">Program
+                                class="display-5 fw-bold lh-1  mb-4 mt-2">Program
                                 Belajar Megajar</h1>
                             <p>Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit. Obcaecati adipisci
