--- a/index.html
+++ b/index.html
@@ -31,17 +31,22 @@
                     class="collapse navbar-collapse ">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href>Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href>Instagram</a>
+                            <a class="nav-link"
+                                href="https://www.instagram.com/alfath_darussalam12">Instagram</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"
+                                href="galeri.html">Galeri</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href>Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
-                                href="https://www.google.co.id/maps/place/Rumah+Quran+Al+Fath+Darussalam/@-2.934607,104.759355,20.5z/data=!4m6!3m5!1s0x2e3b7700152a0277:0xe1f881eb435b8a69!8m2!3d-2.9346851!4d104.7594459!16s%2Fg%2F11vwjv2pmg?entry=ttu">Lokasi</a>
+                                href="https://maps.app.goo.gl/5wt1oWLi2kdZnBeu8">Lokasi</a>
                         </li>
                     </ul>
                 </div>
@@ -87,7 +92,7 @@
                                 <button id="pendaftaran" type="button"
                                     class="btn btn-dark btn-lg px-2 me-md-2 mt-3">Pendaftaran</button>
                                 <button id="produk" type="button"
-                                    class="btn btn-outline-secondary btn-lg px-4">Kurikulum</button>
+                                    class="btn btn-outline-secondary btn-lg px-2">Kurikulum</button>
                             </div>
                         </div>
                     </div>
@@ -95,7 +100,9 @@
                 <hr>
             </section>
             <!-- end header -->
-            <section id="hero">
+
+            <!-- Bagian kedua  -->
+            <section>
                 <div class="container col-xxl-8 px-4">
                     <div
                         class="row flex-lg-row-reverse align-items-center g-5 ">
@@ -107,6 +114,37 @@
                             <h1
                                 class="display-5 fw-bold lh-1  mb-4 mt-2">Program
                                 Belajar Megajar</h1>
+                            <p>Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Obcaecati adipisci
+                                ipsam ab amet assumenda, aliquam velit minima
+                                eos voluptate nesciunt!</p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Ad, ab.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr>
+
+            <!-- bagian ketiga -->
+
+            <section>
+                <div class="container col-xxl-8 px-4">
+                    <div
+                        class="row flex-lg-row-reverse align-items-center g-5 ">
+                        <div class="col-lg-6">
+                            <a href="galeri.html">
+                                <img src="./img/img4.jpeg"
+                                    class="d-block mx-lg-auto img-fluid shadow-lg rounded"
+                                    alt="Bootstrap Themes" width="700"
+                                    height="500"
+                                    loading="lazy">
+                            </a>
+                            <h1
+                                class="display-5 fw-bold lh-1  mb-4 mt-2">Galeri
+                                Kegiatan</h1>
                             <p>Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit. Obcaecati adipisci
                                 ipsam ab amet assumenda, aliquam velit minima
